--- a/RQ6.ipynb
+++ b/RQ6.ipynb
@@ -198,6 +198,7 @@
     }
    ],
    "source": [
+    "# There are tons of programming languages, so I decided to choose three from them. \n",
     "df['Type'].unique()"
    ]
   },
@@ -557,8 +558,6 @@
     }
    ],
    "source": [
-    "import re\n",
-    "\n",
     "# Function to remove ANSI escape sequences\n",
     "def remove_ansi_codes(text):\n",
     "    ansi_escape = re.compile(r'\\x1B(?:[@-Z\\\\-_]|\\[[0-?]*[ -/]*[@-~])')\n",
